--- a/css/pricingpagedesign.css
+++ b/css/pricingpagedesign.css
@@ -1,51 +1,63 @@
+/* reset all margins, padding, and border */
+* {
+    margin: 10;
+    padding: 0;
+    border: 0;
+  }
+  
+  /* reset font size and line height */
+  html {
+    font-size: 100%; /* sets default font size to 10px */
+    line-height: 1.4;
+  }
+  
+  /* reset link styles */
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  /* reset list styles */
+  ul, ol {
+    list-style: none;
+  }
+
 .common{
     font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     text-align: center;
-    padding-left: 10px;
-    padding-right: 40px;
 }
 
 .header{
-    height: 100px;
     background-color: #bd5d38;
     color: #f2dfd7;
+    height: 100px;
     line-height: 100px;
-    font-size: 20;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 p{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" ;
     text-align: center;
-    color: #6c757d;
-    
-    
-}
-
-li{
-    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    text-align: center;
-    color:#343a40
-    font-weight: 100px;
+    color: #343a40;
+    margin: 0;
 }
 
 ul{
     font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    text-align: center;
-    color:#6c757d;
+    color:#343a40;
     font-weight: 100px; 
 }
 
 h2{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     text-align: center;
     color: #bd5d38;
 }
 
 .mainbody{
     background-color:#fff;
-    color: #6c757d;
-    text-align: center;
+    color: #bd5d38;
     font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -54,7 +66,7 @@ h2{
     height: 25px;
     line-height: 25px;
     background-color: #bd5d38;
-    color: #f2dfd7;
+    color: #fff;
     position: fixed;
     bottom: 0px;
     right: 5px;
@@ -72,7 +84,7 @@ img{
 
 nav{
     background-color: #974a2d;
-    padding: 10px;
+    padding: 0px;
     overflow: hidden;
 }
 
@@ -95,9 +107,19 @@ nav a:hover{
 
 a{
     color: #974a2d;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: underline;
+    font-family:"Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+
+.center{
+    text-align: center;
+    list-style-position: inside;
+}
+
+body{
+    background-color: #fff;
+}
 
 
 
